@@ -1,3 +1,6 @@
+2012-04-05  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/cfg/shell.jl: re-align buttons
+
 2012-03-26  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/match-window.jl
 	* lisp/sawfish/wm/ext/window-history.jl
